implementation, over-fitting and under-fitting

--- a/Polynomial_Regression.ipynb
+++ b/Polynomial_Regression.ipynb
@@ -6,7 +6,7 @@
       "name": "Polynomial_Regression.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgEev38Zalbhn1+CbytoJl"
+      "authorship_tag": "ABX9TyNUw9TkjideQvq6kswklFla"
     },
     "kernelspec": {
       "name": "python3",
@@ -484,7 +484,7 @@
         "id": "sjTJuHo16PEf"
       },
       "source": [
-        "So, what we observe is that as the degree keeps on increasing, the RMSE value (which indicates the bias) decreases, and the R2 score (which indicates the variance) increases. Hence, there is a clear trade-off between the bias and variance for a polynomial regression model. "
+        "So, what we observe is that as the degree keeps on increasing, the RMSE value (which indicates the bias) decreases, and the R2 score (which indicates the variance) increases. So, the variance increases and the bias decreases as the degree increases (which eventually leads to over-fitting). When the variance is low at the start, and the bias is high, it is the case of under-fitting. Hence, there is a clear trade-off between the bias and variance for a polynomial regression model. "
       ]
     }
   ]
